added api with postgres
