# express-api/models/estate.ts
@@ -1,0 +1,20 @@
+import {
+    Entity,
+    PrimaryGeneratedColumn,
+    Column,
+} from "typeorm";
+
+@Entity()
+export class Estate {
+    @PrimaryGeneratedColumn()
+    id!: number;
+
+    @Column()
+    name!: string;
+
+    @Column()
+    locality!: string;
+
+    @Column()
+    url!: string;
+}
